--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ firebase.json
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
 # it commented so all members can deploy to the same project(s) in .firebaserc.
-# .firebaserc
+.firebaserc
 
 # Runtime data
 pids
@@ -78,3 +78,6 @@ Website.code-workspace
 package.json
 package-lock.json
 webpack.config.js
+
+# public folder
+public/
