--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
@@ -12,16 +16,13 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.15",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6"
+    "webpack-dev-server": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
