--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
@@ -14,7 +15,7 @@
     "firebase": "^7.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.10.2",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.10.2",
