--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.15",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.10.2",
+    "react-star-ratings": "^2.3.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
